# sc-xmodules-rs

./: .gitignore  404.html  CNAME  Cargo.toml  README.md  index.html  mkdocs.yml  sitemap.xml
.github/: CONTRIBUTING.md
.github/workflows/: actions.yml
community/: index.html
docs/: .pages.yml  community.md  index.md  usage.md
multi-token-pay/: Cargo.toml
multi-token-pay/src/: lib.rs
open-modules/: Cargo.toml  README.md
open-modules/src/: lib.rs
referral-module/: Cargo.toml
referral-module/src/: lib.rs
search/: search_index.json
tests/: Cargo.toml
tests/meta/: Cargo.toml
tests/meta/src/: main.rs
tests/src/: empty.rs
tests/tests/: interactions.rs  test_fee_manager.rs  test_fee_validators.rs  test_multi_token_pay_module.rs  test_referrals_module.rs
tests/tests/setup/: base.rs  fee.rs  mod.rs  multi_token_pay.rs  referrals.rs
tests/wasm/: Cargo.toml
tests/wasm/src/: lib.rs
usage/: index.html
xmodules/: Cargo.toml  README.md
xmodules/src/: fee_manager.rs  fee_payment_validator.rs  lib.rs  multi_token_payment.rs  referrals.rs
