[package]
name = "open-modules"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-only"
authors = [
    "Vlad Nedelcu <vlad.nedelcu@stakegold.com>",
    "Alex Jilavu <alex.jilavu@stakegold.com>"
]
description = "Payments tokens management contract module. This module is used to add/remove tokens that are accepted as payment for the contract."
documentation = "https://github.com/StakeGold/sc-open-modules/README.md"
repository = "https://github.com/StakeGold/sc-open-modules"
keywords = ["multiversx", "wasm", "webassembly", "blockchain", "contract"]
categories = ["no-std", "wasm", "cryptography::cryptocurrencies"]

[lib]
path = "src/lib.rs"

[dependencies.elrond-wasm]
version = "0.38.0"